<resources>
    <string name="app_name">My Expense Monitor</string>
    <string name="charts">Charts</string>
    <string name="add_expense">Add Expense</string>
    <string name="history">History</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_date">30.07.2019</string>
    <string name="today">Today:</string>
    <string name="total_expense">Total Expense:</string>
    <string name="dummy_expense">0</string>
    <string name="dummy_currency">Taka</string>
    <string name="add_expense_details">Add Expense Details</string>
    <string name="amount">Amount</string>
    <string name="select_category">Select Category</string>
    <string name="expense_details">Expense Details</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="note_you_can_add_only_amount_for_now">Note: You can add only amount for now.</string>
    <string name="date">Date:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_expense_details">Update Expense Details</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="set_daily_expense_limit">Set Daily Expense Limit</string>
    <string name="set_currency">Set Currency</string>
    <string name="no_category_added">No Category Selected</string>
    <string name="no_description_added">No Description Added</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
</resources>

